# sixes

./: .gitignore  Cargo.toml
sixes_game/: Cargo.toml
sixes_game/src/: board.rs  lib.rs  player.rs
src/: hexagon.rs  main.rs  pieces.rs  player.rs
