[package]
name = "sixes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = {version = "0.9", features = ["canvas"] }
sixes_game = { path = "./sixes_game" }
iced_web = "0.4"
wasm-bindgen = "0.2.69"
